fix(ffe-core): use `break-all` to wrap words

--- a/packages/ffe-core/less/typography.less
+++ b/packages/ffe-core/less/typography.less
@@ -197,7 +197,7 @@
     margin-bottom: @ffe-spacing-xs;
     margin-top: 0;
     text-wrap: balance;
-    word-break: break-word;
+    word-break: break-all;
     hyphens: auto;
 
     &--error {
@@ -296,7 +296,7 @@
     color: var(--ffe-g-link-color);
     cursor: pointer;
     text-decoration: none;
-    word-wrap: break-word;
+    word-wrap: break-all;
     line-height: 1em;
     transition: all @ffe-transition-duration @ffe-ease;
 
@@ -475,6 +475,6 @@
 .ffe-pre-text,
 .ffe-small-text,
 .ffe-micro-text {
-    word-break: break-word;
+    word-break: break-all;
     hyphens: auto;
 }
